kubernetes/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: teaching-assistant
  labels:
    name: teaching-assistant
    environment: production
